# SpaceTravelGF-PY3

./: .gitignore  CMakeLists.txt  LICENSE  README.md
headers/: ObjLoader.h  camera.h  color.h  fragment.h  framebuffer.h  line.h  model.h  noise.h  print.h  shaders.h  triangle.h
src/: ObjLoader.cpp  main.cpp
